# ports-mirror

./: GIDs  UIDs
devel/chicken5-foreigners/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-iset/: Makefile  distinfo  pkg-descr  pkg-install  pkg-plist
devel/chicken5-matchable/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-object-evict/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-r7rs/: Makefile  distinfo  pkg-deinstall  pkg-descr  pkg-plist
devel/chicken5-regex/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-sql-de-lite/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-srfi-1/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-srfi-13/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-srfi-14/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-srfi-18/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-srfi-69/: Makefile  distinfo  pkg-descr  pkg-plist
devel/chicken5-utf8/: Makefile  distinfo  pkg-descr  pkg-plist
editors/poke/: Makefile  distinfo  pkg-descr  pkg-plist
games/tinymush/: Makefile  distinfo  pkg-descr  pkg-plist
games/tinymush/files/: patch-src-Makefile.in  tinymush.in
lang/ocaml/: Makefile
security/gemcert/: Makefile  distinfo  pkg-descr  pkg-plist
www/bombadillo/: Makefile  distinfo  pkg-descr  pkg-plist
www/gemlikes/: Makefile  distinfo  pkg-descr  pkg-plist
www/gemlikes/files/: gemlikes-install.in  patch-permissions  patch-shared_shared.go
www/gmisub/: Makefile  distinfo  pkg-descr  pkg-plist
www/gmisub/files/: patch-Makefile
www/gmni/: Makefile  distinfo  pkg-descr  pkg-plist
www/gmni/files/: CMakeLists.txt  libgmni.pc.in
www/molly-brown/: Makefile  distinfo  pkg-descr  pkg-plist
www/molly-brown/files/: molly_brown.in  patch-main.go
